# VcvRnboTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CROSS_PLATFORM_NOTES.md  plugin-mm.json  readme.md  todo.txt
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build-metamodule-plugin.yml
VcvModules/: .gitignore  Makefile  plugin.json  readme.txt
VcvModules/max/: Demo.maxpat  Demo.rnbopat  demo.maxpat  readme.txt
VcvModules/src/: Demo.cpp  plugin.cpp  plugin.hpp  readme.txt
VcvModules/src/Demo-rnbo/: description.json
assets/: readme.txt
docs/: createmodules.md  crossplatformnotes.md  more.md  setup.md  todo.txt
scripts/: addDemo.py  check.py  createModule.py  createPlugin.py  readme.txt  removeModule.py
scripts/test/: removeAll.py  reset.py  test.py  testSlugValidation.py  verifyDemo.py  verifyPlaceholders.py
templates/metamodule/: CMakeLists.txt  plugin-mm.json  readme.txt
templates/vcv/: Makefile  plugin.json  readme.txt
templates/vcv/demo/Demo-rnbo/: Demo.cpp.h  description.json  presets.json
templates/vcv/src/: module.cpp  plugin.cpp  plugin.hpp  template.cpp
